from .game_object import GameObject


class Zone(GameObject):
    pass
